# node804-freshservice-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
src/freshservice_mcp/: client.py  config.py  models.py  server.py
src/freshservice_mcp/tools/: __init__.py  agents.py  canned_responses.py  changes.py  groups.py  products.py  requesters.py  service_catalog.py  solutions.py  tickets.py  workspaces.py
src/node804_freshservice_mcp/: __init__.py  client.py  config.py  server.py
src/node804_freshservice_mcp/tools/: agents.py  canned_responses.py  changes.py  files.py  groups.py  products.py  requesters.py  service_catalog.py  solutions.py  tickets.py  workspaces.py
tests/: conftest.py  test_client.py  test_config.py  test_files.py  test_permissions.py  test_tickets.py
