[project]
name = "node804-freshservice-mcp"
version = "1.3.1"
description = "A configurable MCP server for Freshservice with permission modes"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "build>=1.2.2.post1",
    "httpx==0.28.1",
    "mcp[cli]>=1.3.0",
    "node804-mcp-toolkit>=0.1.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.0",
]

[[project.authors]]
name = "Michael Pope"
email = "code@node804.com"

[project.urls]
Homepage = "https://github.com/Node804/node804-freshservice-mcp"
Repository = "https://github.com/Node804/node804-freshservice-mcp"
Issues = "https://github.com/Node804/node804-freshservice-mcp/issues"

[project.scripts]
node804-freshservice-mcp = "node804_freshservice_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/node804_freshservice_mcp"]

# TODO: remove this dev-only source override once node804-mcp-toolkit is
# published to PyPI, then re-run `uv lock`. Source overrides are ignored by
# consumers installing this package from PyPI.
[tool.uv.sources]
node804-mcp-toolkit = { path = "../mcp-toolkit-py", editable = true }
